# neuroagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  test_connections.py
app/: __init__.py  config.py  dependencies.py  main.py
app/agents/: __init__.py  concept_extractor.py  contradiction.py  evaluator.py  fetcher.py  orchestrator.py  summarizer.py  synthesis.py
app/api/: __init__.py
app/api/routes/: __init__.py  evaluations.py  graph.py  research.py
app/models/: __init__.py  evaluation.py  paper.py  state.py  summary.py
app/services/: __init__.py  arxiv_client.py  llm_factory.py  mem0_service.py  mongodb_service.py  neo4j_service.py  qdrant_service.py  semantic_scholar.py
app/utils/: __init__.py  logger.py  retry.py  text_utils.py
evaluation/: benchmark_results.json  run_ragas.py
frontend/: README.md  app.py  requirements.txt
tests/: __init__.py  test_api.py  test_contradiction.py  test_fetcher.py  test_models.py  test_orchestrator.py  test_pipeline.py
